examples/bad/10-02-predefined-error.lagger
int main(){
    error("My own error");
}